added more content

--- a/slides.html
+++ b/slides.html
@@ -40,13 +40,42 @@
         <h2>HTML, CSS, JavaScript</h2>
     </section>
 
-    <section class="slide">
-      <h1>Content</h1>
+    <!-- add introductory slides -->
+
+    <section class='slide'>
+        <h1>HTML</h1>
+    </section>
+
+    <section class='slide'>
+        <p>(content here)</p>
     </section>
 
     <section class="slide">
-      <h1>Here</h1>
+      <h1>CSS</h1>
     </section>
+
+    <section class="slide">
+      <p>We've learned that HTML takes care of the content of our website.</p>
+      <p>With CSS we can make that content look  good!</p>
+    </section>
+
+    <section class='slide'>
+        <p>With HTML alone, we can create websites that look like <a href="https://justinjackson.ca/words.html" target="_blank">this</a></p>
+        <p>By adding CSS, we can create sites that look like <a href="http://www.csszengarden.com/215/" target="_blank">this</a></p>
+    </section>
+
+    <section class="slide">
+      <h1>What does CSS stand for?</h1>
+      <h2>Cascading Style Sheets</h2>
+    </section>
+
+    <section class='slide'>
+        <p>CSS is a "style sheet language" that lets you style the elements on your page.</p>
+
+        <p>CSS works with HTML, but is not HTML itself.</p>
+    </section>
+
+    
 
     <!-- End slides. -->
 
