--- a/slides.html
+++ b/slides.html
@@ -75,7 +75,39 @@
         <p>CSS works with HTML, but is not HTML itself.</p>
     </section>
 
+    <section class='slide'>
+        <code><pre>
+body {
+    background-color: #4a69bd;
+    color: #ffffff;
+    font-family: 'Barlow', sans-serif;
+    margin: 0;
+    text-align: center;
+}
+
+h1 {
+    text-transform: uppercase;
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 40px;
+}
+    </pre></code> 
+    </section>
+
+    <section class='slide'>
+        <img src="images/cssrule.png"/>
+    </section>
+
+    <section class="slide">
+        <h1>The CSS Rule</h1>
+        <p>A block of CSS code is a rule. The rule starts with a selector. </br>It has sets of properties and values.</p>
+    </section>
     
+    <section class="slide">
+        <h2>Let's use our inspector tool to look at some CSS in the browser!</h2>
+    </section>
 
     <!-- End slides. -->
 
