added example site;

--- a/slides.html
+++ b/slides.html
@@ -40,6 +40,18 @@
         <h2>HTML, CSS, JavaScript</h2>
     </section>
 
+    <section class='slide'>
+        <h1>Let's get to know each other!</h1>
+        <h2>What's your name?</h2>
+        <h2>Do you have a favorite website? What do you like about it?</h2>
+        <h2>What are excited to learn about today?</h2>
+    </section>
+
+    <section class='slide'>
+        <h2>Today we will be learning how to use HTML and CSS</br> to make our own portfolio site.</h2>
+        <a target='_blank' href="https://hannahhch.github.io/frontend-adventures-duke-tip/index">Example Website Here</a>
+    </section>
+
     <!-- add introductory slides -->
 
     <section class='slide'>
