--- a/slides.html
+++ b/slides.html
@@ -55,7 +55,8 @@
     <!-- add introductory slides -->
 
     <section class='slide'>
-        <h1>HTML</h1>
+        <img src="images/html5logo.png" alt="HTML 5 Logo">
+
     </section>
 
     <section class='slide'>
@@ -63,7 +64,7 @@
     </section>
 
     <section class="slide">
-      <h1>CSS</h1>
+        <img src="images/css3logo.png" alt="CSS 3 Logo">
     </section>
 
     <section class="slide">
@@ -82,7 +83,7 @@
     </section>
 
     <section class='slide'>
-        <p>CSS is a "style sheet language" that lets you style the elements on your page.</p>
+        <p>CSS is a <strong>style sheet language</strong> that lets you style the elements on your page.</p>
 
         <p>CSS works with HTML, but is not HTML itself.</p>
     </section>
@@ -120,6 +121,55 @@ h2 {
     <section class="slide">
         <h2>Let's use our inspector tool to look at some CSS in the browser!</h2>
     </section>
+
+    <section class="slide">
+        <h2>How can we add CSS to our websites?</h2>
+    </section>
+
+    <section class="slide">
+        <h1>Step One</h1>
+        <p>Create a CSS file</p>
+        <p>Name it something meaningful, with <strong>.css</strong> at the end</p>
+        <p>A good choice might be <strong>styles.css</strong></p>
+        <p>Make sure its in the same folder as your HTML file</p>
+    </section>
+
+    <section class="slide">
+        <h1>Step Two: Link Tag</h1>
+        <p>We need to add a link tag in our HTML file</p>
+        <p>This "links" the CSS file to the HTML file</p>
+        <img src="images/csslink.png"/>
+        <p>The link tag belongs in the <strong>head</strong> of our HTML file</p>
+        <p>Make sure the href matches what you named your CSS file!</p>
+    </section>
+
+    <section class="slide">
+        <h1>Let's start writing some CSS!</h1>
+    </section>
+
+    <section class="slide">
+        <h2>First we need to go back to HTML</h2>
+        <p>Remember those HTML elements we learned about?</p>
+        <p>We can use them to <strong>select</strong> an element to apply styles</p>
+        <code>
+<pre>
+&lt;body>
+    &lt;h1>This is My Website!&lt;/h1>
+    &lt;h2>By Hannah Hudson&lt;/h2>
+    &lt;p>Here is an example of a paragraph on my website. &lt;/br>
+    It even has a &lt;a href="www.google.com">link&lt;/a>!&lt;/p>
+&lt;body>
+
+</pre>
+
+        </code>
+    </section>
+
+    
+
+    
+
+
 
     <!-- End slides. -->
 
