--- a/slides.html
+++ b/slides.html
@@ -257,8 +257,42 @@ p {
         <img src="images/googlefont.png" style="max-width:800px;"/>
     </section>
 
-    
+    <section class="slide">
+        <h1>CSS Selectors</h1>
+        <p>So far we have been selecting HTML elements, but what if we want to be more specific?</p>
+        <p>Example: What if I want to make one of my headers purple but the rest should stay blue?</p>
+    </section>
 
+    <section class="slide">
+        <h2>Remember HTML classes?</h2>
+<code>
+<pre>
+&lt;h1 class="main-header">My Favorite Things&lt;/h1>
+
+</pre>
+</code>
+<h2>We can use these to apply CSS styles</h2>
+    </section>
+
+
+<section class="slide">
+    <h2>When using a class selector, <br/>make sure you put a period in front of the class name</h2>
+<code>
+<pre>
+.main-header {
+    color: blue;
+    font-size: 40px;
+}
+</pre>
+</code>
+<p>This style will <strong>only</strong> apply to elements with the class name of "main-header"</p>
+<p>What will happen if two elements have the same class name?</p>
+</section>
+
+    <section class="slide">
+        <h2>Lets practice using class names to apply styles!</h2>
+
+    </section>
 
 
     <!-- End slides. -->
