--- a/slides.html
+++ b/slides.html
@@ -44,7 +44,7 @@
         <h1>Let's get to know each other</h1>
         <p>1. What's your name?</p>
         <p>2. Do you have a favorite website? What do you like about it?</p>
-        <p>3. What are excited to learn about today?</p>
+        <p>3. What are you excited to learn about today?</p>
     </section>
 
     <section class='slide'>
@@ -151,7 +151,7 @@ h2 {
         <h1>Step Two: Link Tag</h1>
         <p>We need to add a link tag in our HTML file</p>
         <p>This "links" the CSS file to the HTML file</p>
-        <img src="images/csslink.png"/>
+        <img src="images/csslink.png" style="max-width: 1000px;"/>
         <p>The link tag belongs in the <strong>head</strong> of our HTML file</p>
         <p>Make sure the href matches what you named your CSS file!</p>
     </section>
