--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section id="about_me">
             <h1>About Me</h1>
-            <p>I am a web developer at Rivers Agency in Chapel Hill, NC. Before becomming a web developer, I taught high school special education. I've lived in this part of North Carolina for about 4 years. Growing up, I lived in Virginia, Pennsylvania, Georgia and other parts of North Carolina!</p>
+            <p>I am a web developer at Rivers Agency in Chapel Hill, NC. Before becoming a web developer, I taught high school special education. I've lived in this part of North Carolina for about 4 years. Growing up, I lived in Virginia, Pennsylvania, Georgia and other parts of North Carolina!</p>
         </section>
         <section id="fav_things">
             <h1>Favorite Things</h1>
@@ -37,7 +37,7 @@
         </section>
         <section id="family">
             <h1>My Family</h1>
-            <p>My fiancee lives in Durham with me, and we are getting married this September! I also have a 14 year old cat named Clementine. My parents and little sister live in Wilmington, NC. I like visiting them so that I can go to the beach!</p>
+            <p>My fiance lives in Durham with me, and we are getting married this September! I also have a 14 year old cat named Clementine. My parents and little sister live in Wilmington, NC. I like visiting them so that I can go to the beach!</p>
         </section>
         <footer>
             <p>Send me an email at <a href="mailto:hannah.hch@gmail.com">hannah.hch@gmail.com</a></p>
