--- a/slides.html
+++ b/slides.html
@@ -295,6 +295,19 @@ p {
     </section>
 
 
+
+
+
+
+    <section class="slide">
+        <h1>Resources</h1>
+        <p><a target="_blank" href="https://studio.code.org/courses">Studio Code</a></p>
+        <p><a target="_blank" href="https://www.codecademy.com/learn">Codecademy</a></p>
+        <p><a target="_blank" href="https://www.amazon.com/JavaScript-Kids-Playful-Introduction-Programming/dp/1593274084/ref=sr_1_2?ie=UTF8&qid=1532632893&sr=8-2&keywords=javascript+for+kids">JavaScript for Kids Book</a></p>
+
+    </section>
+
+
     <!-- End slides. -->
 
     <!-- Begin extension snippets. Add or remove as needed. -->
