--- a/slides.html
+++ b/slides.html
@@ -294,10 +294,148 @@ p {
 
     </section>
 
+    <section class='slide'>
+        <h2>We can also use HTML ids for CSS</h2>
+<code>
+<pre>
+&lt;h1 id="fav-things">My Favorite Things&lt;/h1>
+</pre>
+</code>
+    </section>
 
 
+    <section class="slide">
+        <h2>When using an ID selector, <br/>make sure you put a hash in front of the ID name</h2>
+    <code>
+    <pre>
+    #fav-things {
+        color: blue;
+        font-size: 40px;
+    }
+    </pre>
+    </code>
+    <p>This style will <strong>only</strong> apply to the single element with the id name of "fav-things"</p>
+    <p>Remember, an ID can only be one element</p>
+    </section>
+
+    <section class="slide">
+        <h2>Lets practice using id names to apply styles!</h2>
+    </section>
+
+    <section class="slide">
+        <h2>The CSS Cascade</h2>
+        <p>What do you think will happen here? Will the H1 elements be blue or green?</p>
+<code><pre>
+h1 {
+    color: blue;
+}
+
+h1 {
+    color: green;
+}
+</pre></code>
+    </section>
+    
+<section class="slide">
+    <h2>ANSWER: green</h2>
+    <p>Since CSS is "cascading", it starts at the top of the stylesheet and moves down.</p>
+    <p>So, the last declaration will (almost) always win</p>
+</section>
+
+<section class="slide">
+    <h2>!important</h2>
+    <p>We can use the !important tag to make sure a style gets applied.</p>
+
+    <code><pre>
+h1 {
+    color: blue!important;
+}
+
+h1 {
+    color: green;
+}
+    </pre></code>
+<p>In this situation, the cascade would be ignored, and the H1 would be blue</p>
+<p>Its not best practice to use important tags; they can make our code hard to understand.</p>
+</section>
+
+<section class="slide">
+    <h2>Let's get back to our website!</h2>
+</section>
+
+<section class="slide">
+    <h1>Background Images</h1>
+    <p>We've learned about images with HTML, but we can also use CSS to set a background image</p>
+</section>
+
+<section class="slide">
+    <h1>Background Properties</h1>
+    <div class="background-example">
+        
+    </div>
+<code>
+<pre>
+.background-example {
+    background-image: url('images/fluffy-cat.jpg');
+    background-size: cover;
+    height: 300px;
+    width: 400px;
+}</pre>
+
+</code>
+</section>
+
+<section class="slide"style="background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);">
+    <h2>You can also use a gradient for a background image</h2>
+    <h2><a href="https://webgradients.com/?ref=sansfrancis.co">Free examples here</a></h2>
+<code>
+
+<pre>
+section {
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+}
+</pre>
+
+</code>
+</section>
+
+<section class="slide">
+    <h2>Practice using the background image property on your site</h2>   
+    <p>Look up background-position and background-repeat</p>
+        <p>See if you can make your own gradient!</p>
+</section>
 
 
+<section class="slide">
+    <h1 style="border: purple 3px solid;">Border and Repetition</h1>
+    <p>We can add border effects to just about any HTML element</p>
+<code >
+<pre>
+.outlined {
+    border: purple 3px solid;
+}
+
+.outlined {
+    border-color: purple
+    border-width: 3px;
+    border-style: solid;
+}
+</pre>
+
+</code>
+</section>
+
+<section class="slide">
+    <h2 style="border-left: purple 3px solid;
+    border-right: yellow 3px solid;">We can specify sides</h2>
+    <code>
+    <pre>
+.outlined {
+    border-left: purple 3px solid;
+    border-right: yellow 3px solid; 
+ }</pre>
+    </code>
+</section>
 
     <section class="slide">
         <h1>Resources</h1>
