--- a/slides.html
+++ b/slides.html
@@ -233,8 +233,37 @@ p {
 
     <section class="slide">
         <h1>Font Weight Chart</h1>
-        <img src="http://www.asmarterwaytolearn.com/pro-html-css/images/illus-expert-font-weight-control-2.png"/>
+        <img src="http://www.asmarterwaytolearn.com/pro-html-css/images/illus-expert-font-weight-control-2.png"/>    
+    </section>
+
+    <section class="slide">
+        <h1>Text Align</h1>
+        <p style="text-align: center;">By default, text is aligned left. </br>We can reset this to <strong>center</strong> or <strong>right</strong> if we want</p>
+<code>
+<pre>
+p {
+    text-align: center;
+}</pre>
+</code>
         
+    </section>
+
+    <section class="slide">
+        <h1>Text Decoration</h1>
+        <code>
+<pre>
+li {
+    text-decoration: underline;
+}</pre>
+</code>
+        <ul>
+            <li style="text-decoration: underline ;">Underline</li>
+            <li style="text-decoration:overline ;">Overline</li>
+            <li style="text-decoration: line-through;">Line Through</li>
+            <li style="text-decoration:underline overline ;">Underline Overline</li>
+            <li><a style="text-decoration:none ;" href="#">None</a></li>
+
+        </ul>
     </section>
 
     <section class="slide">
@@ -436,6 +465,44 @@ section {
  }</pre>
     </code>
 </section>
+
+<section class="slide">
+    <h1>Padding</h1>
+    <h2 style="border: purple 3px solid;">No Padding</h2>
+    <h2 style="border: purple 3px solid; padding: 50px">Padding</h2>
+<code>
+<pre>
+h2 {
+    border: purple 3px solid;
+    padding: 50px;
+}</pre>
+</code>
+</section>
+
+
+<section class="slide">
+    <h1>The Box Model</h1>
+        <img src="images/box-model.png" alt="The CSS Box Model"/>
+        <h2 style="padding: 30px 0 30px 0; border: solid 5px black; margin: 50px;">Content Here</h2>
+
+<code>
+<pre>
+h2 {
+    padding: 30px 0 30px 0;
+    border: solid 5px black;
+    margin: 50px;
+}</pre>
+</code>
+</section>
+
+
+<section class="slide">
+    <h2>Let's practice following the box model</h2>
+    <p>Add some borders</p>
+    <p>Give padding or margin to at least one of your sections</p>
+</section>
+
+<!-- padding, box model, hovers, text decoration, text align -->
 
     <section class="slide">
         <h1>Resources</h1>
