edits to sample site

--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li class='name'>Hannah Hudson</li>
-                    <a href="#about_me"><li>About Me</li></a>
-                    <a href='#fav_things'><li>My Favorite Things</li></a>
-                    <a href="#family"><li>My Family</li></a>
-                </ul>
+                <span class='name'>Hannah Hudson</span>
+                <a href="#about_me">About Me</a>
+                <a href='#fav_things'>My Favorite Things</a>
+                <a href="#family">My Family</a>
             </nav>
         </header>
         <section class='centered'>
             <img src="images/heads.jpg"/>
-            <img src="images/cat.jpg"/>
+            <img src="images/clem.png"/>
+            <img src="images/hike.png"/>
         </section>
         <section id="about_me">
             <h1>About Me</h1>
