--- a/slides.html
+++ b/slides.html
@@ -87,7 +87,7 @@
 
     <section class="slide">
     <h1>What Does CSS Do?</h1>
-        <img src="https://media.giphy.com/media/2SYc7mttUnWWaqvWz8/giphy.gif"/>
+        <img src="https://media.giphy.com/media/uELtzAhhqpRKg/giphy.gif"/>
       <p>We've learned that HTML takes care of the content of our website.</p>
       <p>With CSS we can make that content look  good!</p>
         <p>With HTML alone, we can create websites that look like <a href="https://justinjackson.ca/words.html" target="_blank">this</a></p>
@@ -123,12 +123,9 @@ h2 {
     </pre></code> 
     </section>
 
-    <section class='slide'>
-        <img src="images/cssrule.png"/>
-    </section>
-
     <section class="slide">
         <h1>The CSS Rule</h1>
+        <img src="images/cssrule.png"/>
         <p>A block of CSS code is a rule. The rule starts with a selector. </br>It has sets of properties and values.</p>
     </section>
     
@@ -144,7 +141,7 @@ h2 {
     <section class="slide">
         <h1>Step One</h1>
         <p>Create a CSS file</p>
-        <p>Name it something meaningful, with <strong>.css</strong> at the end</p>
+        <p>Name it something that makes sense to you, with <strong>.css</strong> at the end</p>
         <p>A good choice might be <strong>styles.css</strong></p>
         <p>Make sure its in the same folder as your HTML file</p>
     </section>
@@ -166,7 +163,7 @@ h2 {
     <section class="slide">
         <h1>Back to HTML</h1>
         <p>Remember those HTML elements we learned about?</p>
-        <p>We can use them to <strong>select</strong> an element to apply styles</p>
+        <p>We will use selectors to apply styles to these elements (body, h1, h2, p, a)</p>
         <code>
 <pre>
 &lt;body>
@@ -180,7 +177,7 @@ h2 {
     </section>
 
     <section class="slide" style="background-color: gray; color: white;">
-        <h2>Let's select the body element and makes some color changes</h2>
+        <h2>Let's select the body element and make some color changes</h2>
         <code>
             <pre>
 body {
@@ -271,7 +268,7 @@ li {
     <section class="slide">
         <h1>"Web Safe" Font Families</h1>
         <img src="https://media.giphy.com/media/MwJeR4kjyHMwo/giphy.gif"/>
-        <p>There are a handful of fonts that come with your browser. The full list is <a target="_blank"href="https://www.w3schools.com/cssref/css_websafe_fonts.asp">here</a></p>
+        <p>There are a handful of fonts that come with your operating system. The full list is <a target="_blank"href="https://www.w3schools.com/cssref/css_websafe_fonts.asp">here</a></p>
     </section>
 
     <section class="slide">
@@ -339,18 +336,18 @@ li {
     <section class="slide">
         <h2>When using an ID selector, <br/>make sure you put a hash in front of the ID name</h2>
     <code>
-    <pre>
-    #fav-things {
-        color: blue;
-        font-size: 40px;
-    }</pre>
+<pre>
+#fav-things {
+    color: blue;
+    font-size: 40px;
+}</pre>
     </code>
     <p>This style will <strong>only</strong> apply to the single element with the id name of "fav-things"</p>
     <p>Remember, an ID can only be one element</p>
     </section>
 
     <section class="slide">
-        <h2>Lets practice using id names to apply styles!</h2>
+        <h2>Lets practice using ids to apply styles!</h2>
     </section>
 
     <section class="slide">
@@ -396,6 +393,7 @@ h1 {
 
 <section class="slide">
     <h1>Background Images</h1>
+    <img src="https://media.giphy.com/media/ZSGQ3lb8tzS4U/giphy.gif"/>
     <p>We've learned about images with HTML, but we can also use CSS to set a background image</p>
 </section>
 
@@ -418,7 +416,7 @@ h1 {
 
 <section class="slide"style="background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);">
     <h2>You can also use a gradient for a background image</h2>
-    <h2><a href="https://webgradients.com/?ref=sansfrancis.co">Free examples here</a></h2>
+    <h2><a target="_blank" href="https://webgradients.com/?ref=sansfrancis.co">Examples here</a></h2>
 <code>
 
 <pre>
@@ -504,7 +502,7 @@ h2 {
     <p>Give padding or margin to at least one of your sections</p>
 </section>
 
-<!-- padding, box model, hovers, text decoration, text align -->
+<!-- nesting, hovers, border radius -->
 
     <section class="slide">
         <h1>Resources</h1>
